<resources>
    <string name="app_name">ChaikinWeather</string>
    <string name="search_location">Search location</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="chance_rain">Chance rain</string>
    <string name="wind_direction">Wind Dir</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="settings">Settings</string>
    <string name="push_notifications">On/off notifications</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">Default</string>
    <string name="location_permission">Permission for location</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="type_of_temperature_unit">Type of temperature unit</string>
    <string name="theme">Theme</string>
    <string name="feel_like">Feels like:</string>
    <string-array name="temperature_units">
        <item>Celsius (°C)</item>
        <item>Fahrenheit (°F)</item>
    </string-array>
    <string-array name="theme_options">
        <item>System Default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
</resources>