<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="30dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp"
    app:strokeColor="@color/sonic_silver"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageCurrentWeather"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:minHeight="80sp"
            android:foregroundGravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textTemperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/raisin_black"
            android:textSize="60sp"

            android:textStyle="bold"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@id/imageCurrentWeather"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageCurrentWeather"
            app:layout_constraintBottom_toBottomOf="@id/imageCurrentWeather"
            tools:text="25.85\u00B0F"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardWind"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/cultured"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@id/imageCurrentWeather"
            app:layout_constraintEnd_toStartOf="@id/cardHumidity"
            app:layout_constraintTop_toBottomOf="@id/imageCurrentWeather"
            app:layout_constraintStart_toStartOf="@id/imageCurrentWeather"
            app:strokeColor="@color/sonic_silver"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/air_24px"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/wind"
                    android:textColor="@color/sonic_silver"
                    android:textSize="15sp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/raisin_black"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="10 km/h" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardHumidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:cardBackgroundColor="@color/cultured"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@id/cardChanceOfRain"
            app:layout_constraintStart_toEndOf="@id/cardWind"
            app:layout_constraintTop_toBottomOf="@id/imageCurrentWeather"
            app:strokeColor="@color/sonic_silver"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/humidity_low_24px"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/humidity"
                    android:textColor="@color/sonic_silver"
                    android:textSize="15sp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/raisin_black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="10 %" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardChanceOfRain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:cardBackgroundColor="@color/cultured"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardHumidity"
            app:layout_constraintTop_toBottomOf="@id/imageCurrentWeather"
            app:strokeColor="@color/sonic_silver"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/rainy_24px"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/chance_rain"
                    android:textColor="@color/sonic_silver"
                    android:textSize="15sp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textChanceOfRain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/raisin_black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="10 %" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardWindDirection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/cultured"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/cardChanceOfRain"
            app:layout_constraintStart_toStartOf="@id/cardWind"
            app:layout_constraintEnd_toEndOf="@id/cardWind"
            app:strokeColor="@color/sonic_silver"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/explore_24px" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/wind_direction"
                    android:textColor="@color/sonic_silver"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textWindDirection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/raisin_black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="N" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardSunrise"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/cultured"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/cardChanceOfRain"
            app:layout_constraintStart_toEndOf="@id/cardWindDirection"
            app:layout_constraintEnd_toEndOf="@id/cardHumidity"
            app:strokeColor="@color/sonic_silver"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/landscape_2_24px" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sunrise"
                    android:textColor="@color/sonic_silver"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textSunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/raisin_black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="06:30" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardSunset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/cultured"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/cardChanceOfRain"
            app:layout_constraintStart_toEndOf="@id/cardSunrise"
            app:layout_constraintEnd_toEndOf="@id/cardChanceOfRain"
            app:strokeColor="@color/sonic_silver"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/landscape_2_off_24px" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sunset"
                    android:textColor="@color/sonic_silver"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textSunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/raisin_black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="06:30" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>